frontend with auth